updated game, graphics + movable pieces

--- a/Chess Graphics/Chess Graphics.vcxproj
+++ b/Chess Graphics/Chess Graphics.vcxproj
@@ -137,41 +137,53 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="AiPlayer.cpp" />
     <ClCompile Include="App.cpp" />
-    <ClCompile Include="Bishop.cpp" />
+    <ClCompile Include="Black_Bishop.cpp" />
+    <ClCompile Include="Black_King.cpp" />
+    <ClCompile Include="Black_Knight.cpp" />
+    <ClCompile Include="Black_Pawn.cpp" />
+    <ClCompile Include="Black_Queen.cpp" />
+    <ClCompile Include="Black_Rook.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="HumanPlayer.cpp" />
-    <ClCompile Include="King.cpp" />
-    <ClCompile Include="Knight.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Model.cpp" />
-    <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Piece.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Queen.cpp" />
-    <ClCompile Include="Rook.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="View.cpp" />
+    <ClCompile Include="White_Bishop.cpp" />
+    <ClCompile Include="White_King.cpp" />
+    <ClCompile Include="White_Knight.cpp" />
+    <ClCompile Include="White_Pawn.cpp" />
+    <ClCompile Include="White_Queen.cpp" />
+    <ClCompile Include="White_Rook.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="AiPlayer.h" />
     <ClInclude Include="App.h" />
-    <ClInclude Include="Bishop.h" />
+    <ClInclude Include="Black_Bishop.h" />
+    <ClInclude Include="Black_King.h" />
+    <ClInclude Include="Black_Knight.h" />
+    <ClInclude Include="Black_Pawn.h" />
+    <ClInclude Include="Black_Queen.h" />
+    <ClInclude Include="Black_Rook.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Controller.h" />
     <ClInclude Include="HumanPlayer.h" />
-    <ClInclude Include="King.h" />
-    <ClInclude Include="Knight.h" />
     <ClInclude Include="Model.h" />
-    <ClInclude Include="Pawn.h" />
     <ClInclude Include="Piece.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="Queen.h" />
-    <ClInclude Include="Rook.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="View.h" />
+    <ClInclude Include="White_Bishop.h" />
+    <ClInclude Include="White_King.h" />
+    <ClInclude Include="White_Knight.h" />
+    <ClInclude Include="White_Pawn.h" />
+    <ClInclude Include="White_Queen.h" />
+    <ClInclude Include="White_Rook.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="black_bishop.png" />
